shared/src/test/data/yeast/invalid-json/unquoted-value-map.jyt
BeginDocument       0,  1,  0 ''
BeginNode           0,  1,  0 ''
BeginMapping        0,  1,  0 ''
Indicator           0,  1,  0 '{'
LineBreak           1,  1,  1 '\n'
WhiteSpace          2,  2,  0 '  '
BeginPair           4,  2,  2 ''
BeginNode           4,  2,  2 ''
BeginScalar         4,  2,  2 ''
Indicator           4,  2,  2 '\"'
Text                5,  2,  3 'ccc'
Indicator           8,  2,  6 '\"'
EndScalar           9,  2,  7 ''
EndNode             9,  2,  7 ''
Indicator           9,  2,  7 ':'
WhiteSpace         10,  2,  8 ' '
BeginNode          11,  2,  9 ''
BeginScalar        11,  2,  9 ''
Indicator          11,  2,  9 '\"'
Text               12,  2, 10 'hh'
Indicator          14,  2, 12 '\"'
EndScalar          15,  2, 13 ''
EndNode            15,  2, 13 ''
EndPair            15,  2, 13 ''
Indicator          15,  2, 13 ','
LineBreak          16,  2, 14 '\n'
WhiteSpace         17,  3,  0 '  '
BeginPair          19,  3,  2 ''
BeginNode          19,  3,  2 ''
BeginScalar        19,  3,  2 ''
Indicator          19,  3,  2 '\"'
Text               20,  3,  3 'abb'
Indicator          23,  3,  6 '\"'
EndScalar          24,  3,  7 ''
EndNode            24,  3,  7 ''
Indicator          24,  3,  7 ':'
WhiteSpace         25,  3,  8 ' '
BeginNode          26,  3,  9 ''
BeginScalar        26,  3,  9 ''
Error              26,  3,  9 'aa'
Text               26,  3,  9 'aa'
EndScalar          28,  3, 11 ''
EndNode            28,  3, 11 ''
EndPair            28,  3, 11 ''
Indicator          28,  3, 11 ','
LineBreak          29,  3, 12 '\n'
WhiteSpace         30,  4,  0 '  '
BeginPair          32,  4,  2 ''
BeginNode          32,  4,  2 ''
BeginScalar        32,  4,  2 ''
Indicator          32,  4,  2 '\"'
Text               33,  4,  3 'recover'
Indicator          40,  4, 10 '\"'
EndScalar          41,  4, 11 ''
EndNode            41,  4, 11 ''
Indicator          41,  4, 11 ':'
WhiteSpace         42,  4, 12 ' '
BeginNode          43,  4, 13 ''
BeginScalar        43,  4, 13 ''
Indicator          43,  4, 13 '\"'
Text               44,  4, 14 're'
Indicator          46,  4, 16 '\"'
EndScalar          47,  4, 17 ''
EndNode            47,  4, 17 ''
EndPair            47,  4, 17 ''
LineBreak          47,  4, 17 '\n'
Indicator          48,  5,  0 '}'
EndMapping         49,  5,  1 ''
EndNode            49,  5,  1 ''
EndDocument        49,  5,  1 ''
